--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.1.3",
+    "bcryptjs": "^3.0.3",
+    "mongodb": "^5.9.2",
     "next": "16.0.1",
+    "next-auth": "^4.24.13",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
@@ -29,10 +33,10 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.13",
-    "typescript": "^5",
     "prettier": "^3.6.2",
-    "prettier-plugin-tailwindcss": "^0.7.1"
+    "prettier-plugin-tailwindcss": "^0.7.1",
+    "tailwindcss": "^3.4.13",
+    "typescript": "^5"
   },
   "links": {
     "linkedin": "https://www.linkedin.com/in/zayani-mehdi"
