--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
     "bcryptjs": "^3.0.3",
+    "framer-motion": "^12.23.24",
     "mongodb": "^5.9.2",
     "next": "16.0.1",
     "next-auth": "^4.24.13",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
