--- a/package.json
+++ b/package.json
@@ -1,12 +1,36 @@
 {
   "name": "nextjs-auth-starter",
   "version": "0.1.0",
-  "description": "A minimal Next.js starter with TailwindCSS and dark mode, created by Mehdi Zayani",
-  "author": "Mehdi Zayani <contact@mehdizayani.com>",
+  "private": true,
+  "type": "module",
+  "description": "A modern, minimal, and scalable Next.js starter with TailwindCSS, dark mode, and authentication by Mehdi Zayani.",
+  "author": {
+    "name": "Mehdi Zayani",
+    "email": "contact@mehdizayani.com",
+    "url": "https://www.mehdizayani.com"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/mehdi-zayani/nextjs-auth-starter.git"
   },
+  "bugs": {
+    "url": "https://github.com/mehdi-zayani/nextjs-auth-starter/issues"
+  },
+  "homepage": "https://nextjs-auth-starter.vercel.app",
+  "keywords": [
+    "nextjs",
+    "starter",
+    "auth",
+    "authentication",
+    "tailwindcss",
+    "typescript",
+    "dark-mode",
+    "react",
+    "next-auth",
+    "vercel",
+    "devops",
+    "mehdi-zayani"
+  ],
   "license": "MIT",
   "scripts": {
     "dev": "next dev",
@@ -14,7 +38,9 @@
     "start": "next start",
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
     "lint:fix": "eslint . --ext .ts,.tsx,.js,.jsx --fix",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "test": "echo \"No test specified\" && exit 0",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
@@ -36,13 +62,22 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.2",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.7.1",
     "tailwindcss": "^3.4.13",
     "typescript": "^5"
   },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,css,md}": "prettier --write"
+  },
   "links": {
-    "linkedin": "https://www.linkedin.com/in/zayani-mehdi"
+    "linkedin": "https://www.linkedin.com/in/zayanimehdi"
   }
 }
