--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,13 +14,18 @@ jobs:
   build-and-test:
     name: Build and Test
     runs-on: ubuntu-latest
+    env:
+      MONGODB_URI: ${{ secrets.MONGODB_URI }}
+      NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
+      GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+      GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
 
     steps:
       # 1️ Checkout the repository code
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2️ Use Node.js version defined in package.json (via .nvmrc or manually)
+      # 2️ Use Node.js version defined in package.json
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -39,12 +44,12 @@ jobs:
       - name: Build project
         run: npm run build
 
-      # 6️ Run tests if present (optional but professional)
+      # 6️ Run tests if present
       - name: Run tests
         run: npm test
-        continue-on-error: true # Avoid blocking the workflow if no test setup yet
+        continue-on-error: true
 
-      # 7 Upload build output for debugging or deployment preview
+      # 7️ Upload build output for debugging or deployment preview
       - name: Upload build artifacts
         if: success()
         uses: actions/upload-artifact@v4
@@ -52,12 +57,18 @@ jobs:
           name: next-build
           path: .next
 
-  #  Optional job for Vercel preview deployments (manual trigger)
   deploy-preview:
     name: Deploy Preview (Manual)
     runs-on: ubuntu-latest
     needs: build-and-test
     if: github.event_name == 'workflow_dispatch'
+    env:
+      MONGODB_URI: ${{ secrets.MONGODB_URI }}
+      NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
+      GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+      GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
+      VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -70,6 +81,5 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      # 8️ Deploy to Vercel using the official CLI (requires VERCEL_TOKEN secret)
       - name: Deploy to Vercel (Preview)
         run: npx vercel --token=${{ secrets.VERCEL_TOKEN }} --prod=false
