--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,17 +15,17 @@ jobs:
     name: Build and Test
     runs-on: ubuntu-latest
     env:
-      MONGODB_URI: ${{ secrets.MONGODB_URI || '' }}
-      NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET || '' }}
-      GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID || '' }}
-      GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET || '' }}
+      MONGODB_URI: ${{ secrets.MONGODB_URI }}
+      NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
+      GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+      GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
 
     steps:
       # 1️ Checkout the repository code
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2️ Use Node.js version defined in package.json
+      # 2️ Use Node.js version defined in package.json (via .nvmrc or manually)
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -44,12 +44,12 @@ jobs:
       - name: Build project
         run: npm run build
 
-      # 6️ Run tests if present
+      # 6️ Run tests if present (optional but professional)
       - name: Run tests
         run: npm test
         continue-on-error: true
 
-      # 7️ Upload build output for debugging or deployment preview
+      # 7 Upload build output for debugging or deployment preview
       - name: Upload build artifacts
         if: success()
         uses: actions/upload-artifact@v4
@@ -63,11 +63,11 @@ jobs:
     needs: build-and-test
     if: github.event_name == 'workflow_dispatch'
     env:
-      MONGODB_URI: ${{ secrets.MONGODB_URI || '' }}
-      NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET || '' }}
-      GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID || '' }}
-      GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET || '' }}
-      VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN || '' }}
+      VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+      MONGODB_URI: ${{ secrets.MONGODB_URI }}
+      NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
+      GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+      GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
 
     steps:
       - name: Checkout repository
@@ -81,5 +81,6 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      # Deploy to Vercel using the official CLI (manual trigger)
       - name: Deploy to Vercel (Preview)
         run: npx vercel --token=${{ secrets.VERCEL_TOKEN }} --prod=false
